# qpang-essence-emulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  linux_setup.sh
cmake/macros/: FindMySQL.cmake
database/: positions.sql  positions_updated.sql  qpang.sql  qpang_shop.sql  skill_inserts.sql  weapons.sql
dep/tnl/: CMakeLists.txt  eventConnection.cpp  log.cpp  netBase.cpp  netConnection.cpp  netInterface.cpp  platform.cpp  tnlLog.h  tnlNetInterface.h  tnlTypes.h  tnlVector.h
src/: CMakeLists.txt
src/servers/: CMakeLists.txt
src/servers/auth/: CMakeLists.txt  auth_manager.hpp  auth_server.cpp  auth_server.hpp  auth_session.cpp  auth_session.hpp  main.cpp
src/servers/auth/packets/: auth_packet_handler.hpp
src/servers/lobby/: CMakeLists.txt  lobby.cpp  lobby.hpp  lobby_server.cpp  lobby_server.hpp  main.cpp
src/servers/lobby/data/: offline_player.hpp
src/servers/lobby/packets/: lobby_packet_event.hpp  lobby_packet_handler.hpp
src/servers/lobby/session/: equipment_manager.cpp  equipment_manager.hpp  info_manager.cpp  info_manager.hpp  lobby_session.cpp  lobby_session.hpp
src/servers/room/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/servers/room/game_room/: game_room.cpp  game_room.hpp  game_room_session.cpp  game_room_session.hpp  mode.hpp  player_connector.cpp  player_connector.hpp  player_spawner.cpp  player_spawner.hpp  room_state.hpp  score_board.cpp  score_board.hpp  spawn.hpp  team.hpp
src/servers/room/lobby_session/: game_lobby_session.cpp  (+1 more)
src/servers/shared/: CMakeLists.txt  accounts.hpp  settings_manager.hpp
src/servers/square/: CMakeLists.txt  main.cpp  square.cpp  square.hpp  square_manager.cpp  square_manager.hpp  square_server.cpp  square_server.hpp
(+292 files in other folders)
